--- a/apns-cpp.conf
+++ b/apns-cpp.conf
@@ -1,4 +1,32 @@
-﻿[common]
+﻿#####################################################################
+#####################################################################
+#section name
+#[demo1_dev_service]
+#appid
+#appid = 13 
+
+#service name
+#name = demo1_dev_service 
+
+#证书
+#certfile = demo1_dev_cert.pem
+#keyfile = demo1_dev_key_noenc.pem
+
+##是否是开发
+#develop = true
+
+#连接个数
+#apnsconncount = 2
+
+#空闲时间, 超出重连
+#idletime = 3600
+
+#获取feedback时长
+#feedbacktime = 86400
+#####################################################################
+#####################################################################
+
+[common]
 redis_addr = 172.16.0.52
 redis_port = 6379
 
@@ -7,31 +35,6 @@ log_level = 1
 
 #0:conslole 1:file
 log_type = 0
-
-######section name0
-#[demo1_dev_service]
-
-######appid
-#appid = 13
-
-######service name
-#name = demo1_dev_service
-
-######证书
-#certfile = demo1_dev_cert.pem
-#keyfile = demo1_dev_key_noenc.pem
-
-######是否是开发
-#develop = true
-
-######连接个数
-#apnsconncount = 2
-
-######空闲时间, 超出重连
-#idletime = 3600
-
-######获取feedback时长
-#feedbacktime = 86400
 
 [demo1_dev_service]
 appid = 13
